# nasa-encoding-framework

./: .gitignore  IDX2_install.md  README.md  analytics.md  config.py  conversion.md  convert_llc.py  convert_to_idx2.py  data-descriptions.md  data-transfer.md  jupyter.md  notebooks-and-scenes.md  reports.md
conversion_scripts/: config.py  config_u_face_0_depth_0_20_time_0_1024.py  config_u_face_0_depth_20_40_time_0_1024.py  config_u_llc4320.py  config_v_face_3_depth_0_20_time_0_1024.py  config_v_face_4_depth_0_20_time_0_1024.py  convert_llc_x_y_depth.py  convert_llc_x_y_depth_local.py  convert_llc_x_y_time.py  convert_ocean_to_idx.py  extract-all_llc4320.py  extract-face-across-depth.py  extract-face-across-time.py  extract-one-face.py  extract_3d.py  run_rsync.py  script-convert_endian.py  script-extract_all.py  script-rotate_faces_3_4.py  script-visualize.py  test_convert_atmosphere.py
idx2-test/: CMakeLists-with-python.txt  CMakeLists.txt  idx2-test-bug-fixed.cpp  idx2-test-nina.cpp  idx2-test.cpp  idx2.hpp
notebooks/: NASA-Explore-slices-over-time-divergentcolormap-instruction.rtf  NASA-Explore-slices-over-time-divergentcolormap.ipynb  NASA_Atmosphere_visualize_slices.ipynb  SS_llc2160_bokeh_demo.ipynb  SealStorage_Ocean_data.ipynb  conversion_nc_to_raw.ipynb  merge_raw.ipynb  nasa-demo-skeleton-IDX1.ipynb  nasa-llc4320.ipynb  raw_test.ipynb  test-atmos.ipynb  test-llc2160-1024-times-steps.ipynb  test-llc2160.ipynb  test-llc4320.ipynb  test.ipynb  test_netcdf.ipynb  testing_atmosphere_idx_conversion.ipynb  view.ipynb  visualize-faces.ipynb
(+35 files in other folders)
